--- a/src/assets/scss/0-base/_variables.scss
+++ b/src/assets/scss/0-base/_variables.scss
@@ -12,7 +12,7 @@ $white: #ffffff;
 $black: #000000;
 
 // Body Text
-$body-text-color: $mine-shaft-black;
+$body-text-color: #333;
 $body-font-weight: 400;
 $body-line-height: 20px;
 $body-font-size: 15px;
