--- a/src/assets/scss/1-global/_default.scss
+++ b/src/assets/scss/1-global/_default.scss
@@ -122,3 +122,49 @@
 
   }
 
+
+  .slick-slide>div>div {
+    vertical-align: middle;
+}
+
+
+/*----------  Sharp border tippyjs theme  ----------*/
+
+  /* If `animateFill: true` (default) */
+  .tippy-tooltip.sharpborder-theme .tippy-backdrop {
+    background-color: #383838;
+    font-weight: 400;
+    color: #fff;
+  }
+  
+  /* If `animateFill: false` */
+  .tippy-tooltip.sharpborder-theme {
+    font-weight: 400;
+    border-radius: 0;
+    font-size: 12px;
+    box-shadow: 4px 4px 8px rgba(0,0,0,.3);
+    background: #383838;
+    color: #fff;
+    line-height: 12px;
+    white-space: nowrap;
+    padding: 8px 10px;
+  }
+
+  /* If `animateFill: true` (default) */
+  .tippy-tooltip.roundborder-theme .tippy-backdrop {
+    background-color: #383838;
+    font-weight: 400;
+    color: #fff;
+  }
+  
+  /* If `animateFill: false` */
+  .tippy-tooltip.roundborder-theme {
+    font-weight: 400;
+    font-size: 12px;
+    box-shadow: 4px 4px 8px rgba(0,0,0,.3);
+    background: #383838;
+    color: #fff;
+    line-height: 12px;
+    white-space: nowrap;
+    padding: 8px 10px;
+  }
