--- a/src/assets/scss/2-layout/_footer.scss
+++ b/src/assets/scss/2-layout/_footer.scss
@@ -3,6 +3,6 @@
 =            footer            =
 =============================================*/
 
-/*=====  End of blue page style  ======*/
+/*=====  End of footer style  ======*/
 
 
