--- a/src/assets/scss/0-base/_mixins.scss
+++ b/src/assets/scss/0-base/_mixins.scss
@@ -1,7 +1,6 @@
-@mixin font-prop($size: false, $colour: false, $weight: false,  $lh: false) {
-    font-family: $font-family-name;
+@mixin font-prop($size: false, $color: false, $weight: false,  $lh: false) {
     @if $size { font-size: $size; }
-    @if $colour { color: $colour; }
+    @if $color { color: $color; }
     @if $weight { font-weight: $weight; }
     @if $lh { line-height: $lh; }
 }
