--- a/src/assets/scss/0-base/_helper.scss
+++ b/src/assets/scss/0-base/_helper.scss
@@ -1,8 +1,11 @@
 @import '0-base/variables';
 
-/*--
-    - Custom Row
-------------------------------------------*/
+
+/*=============================================
+=            Helper CSS            =
+=============================================*/
+
+
 @for $i from 0 through 15 {
     .row-#{1 * $i} {
         margin-left: -1px * $i;
@@ -72,3 +75,8 @@
         margin: 0;
     }
 }
+
+
+
+/*=====  End of Helper CSS  ======*/
+
