--- a/src/assets/scss/2-layout/_container.scss
+++ b/src/assets/scss/2-layout/_container.scss
@@ -1,8 +1,9 @@
 
 /*=============================================
-=            Header            =
+=            container            =
 =============================================*/
 
 
 
- /*=====  End of Header  ======*/
+/*=====  End of container  ======*/
+
