--- a/src/assets/scss/3-elements/_accordions.scss
+++ b/src/assets/scss/3-elements/_accordions.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            Header            =
+=            accordions            =
 =============================================*/
 
 
+/*=====  End of accordions  ======*/
 
- /*=====  End of Header  ======*/
