--- a/src/assets/scss/3-elements/_backgrounds.scss
+++ b/src/assets/scss/3-elements/_backgrounds.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            Header            =
+=            backgrounds            =
 =============================================*/
 
 
+/*=====  End of backgrounds  ======*/
 
- /*=====  End of Header  ======*/
