--- a/src/assets/scss/3-elements/_button.scss
+++ b/src/assets/scss/3-elements/_button.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            Header            =
+=            Button            =
 =============================================*/
 
 
+/*=====  End of Button  ======*/
 
- /*=====  End of Header  ======*/
