--- a/src/assets/scss/3-elements/_scroll-top.scss
+++ b/src/assets/scss/3-elements/_scroll-top.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            Header            =
+=            scroll top            =
 =============================================*/
 
 
+/*=====  End of scroll top  ======*/
 
- /*=====  End of Header  ======*/
