--- a/src/assets/scss/3-elements/_section-title.scss
+++ b/src/assets/scss/3-elements/_section-title.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            Header            =
+=            section title            =
 =============================================*/
 
 
+/*=====  End of section title  ======*/
 
- /*=====  End of Header  ======*/
