--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,10 +3,18 @@
 =            CSS Index            =
 =============================================
 
+    -> Helper CSS
     -> Default styles
+    -> Spacing
     -> Header
     -> Footer
     -> Sidebar
+    -> Container
+    -> Button
+    -> Section title
+    -> Backgrounds
+    -> Accordions
+    -> Scroll top
 
 
 
@@ -14,8 +22,18 @@
 
 
     @import '0-base/variables';
+    @import '0-base/rfs';
     @import '0-base/mixins';
+    @import '0-base/helper';
     @import '1-global/default';
+    @import '1-global/spacing';
     @import '2-layout/header';
     @import '2-layout/footer';
     @import '2-layout/sidebar';
+    @import '2-layout/container'; 
+    @import '3-elements/button';
+    @import '3-elements/section-title';
+    @import '3-elements/backgrounds';
+    @import '3-elements/accordions';
+    @import '3-elements/scroll-top';
+   
