--- a/src/partials/page-top.htm
+++ b/src/partials/page-top.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Template Name</title>
+	<title>Template Title</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -17,10 +17,9 @@
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
    
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.min.css">
-   
-   
-    
+	<link rel="stylesheet" href="assets/css/vendor/fontawesome-all.min.css">
+	
+
     <!-- Vendor & Plugins CSS (Please remove the comment from below vendor.min.css & plugins.min.css for better website load performance and remove css files from avobe) -->
     <!--
 	<link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
@@ -29,7 +28,6 @@
 
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 
 
 </head>
