--- a/src/partials/page-bottom.htm
+++ b/src/partials/page-bottom.htm
@@ -1,32 +1,32 @@
-<!-- JS
-============================================ -->
+    <!-- JS
+    ============================================ -->
 
-<!-- Modernizer JS -->
-<script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- Modernizer JS -->
+    <script src="assets/js/modernizr-2.8.3.min.js"></script>
 
-<!-- jQuery JS -->
-<script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
+    <!-- jQuery JS -->
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
 
-<!-- Bootstrap JS -->
-<script src="assets/js/vendor/bootstrap.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="assets/js/bootstrap.min.js"></script>
 
-<!-- Popper JS -->
-<script src="assets/js/vendor/popper.min.js"></script>
-
-
-<!-- Mailchimp JS -->
-<script src="assets/js/plugins/mailchimp-ajax-submit.min.js"></script>
-
-<!-- Plugins JS (Please remove the comment from below plugins.min.js for better website load performance and remove plugin js files from avobe) -->
-
-<!--
-<script src="assets/js/plugins/plugins.min.js"></script>
--->
-
-<!-- Main JS -->
-<script src="assets/js/main.js"></script>
+    <!-- Popper JS -->
+    <script src="assets/js/popper.min.js"></script>
 
 
-</body>
+    <!-- Mailchimp JS -->
+    <script src="assets/js/plugins/mailchimp-ajax-submit.min.js"></script>
+
+    <!-- Plugins JS (Please remove the comment from below plugins.min.js for better website load performance and remove plugin js files from avobe) -->
+
+    <!--
+    <script src="assets/js/plugins/plugins.min.js"></script>
+    -->
+
+    <!-- Main JS -->
+    <script src="assets/js/main.js"></script>
+
+
+    </body>
 
 </html>
