--- a/src/assets/scss/2-global/_common.scss
+++ b/src/assets/scss/2-global/_common.scss
@@ -1,8 +1,9 @@
 
 /*=============================================
-=            footer            =
+=            Common            =
 =============================================*/
 
-/*=====  End of footer ======*/
 
+
+/*=====  End of Common  ======*/
 
