--- a/src/assets/scss/2-global/_spacing.scss
+++ b/src/assets/scss/2-global/_spacing.scss
@@ -1,8 +1,7 @@
 
 /*=============================================
-=            scroll top            =
+=            Spacing            =
 =============================================*/
 
 
-/*=====  End of scroll top  ======*/
-
+/*=====  End of Spacing  ======*/
