--- a/src/assets/scss/4-elements/_section-title.scss
+++ b/src/assets/scss/4-elements/_section-title.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            section title            =
+=            Section Title            =
 =============================================*/
 
 
-/*=====  End of section title  ======*/
+/*=====  End of Section Title  ======*/
 
