--- a/src/assets/scss/2-global/_helper.scss
+++ b/src/assets/scss/2-global/_helper.scss
@@ -1,82 +1,78 @@
-@import '0-base/variables';
-
-
 /*=============================================
-=            Helper CSS            =
+=            Helper            =
 =============================================*/
-
 
 @for $i from 0 through 15 {
     .row-#{1 * $i} {
-        margin-left: -1px * $i;
         margin-right: -1px * $i;
-        
+        margin-left: -1px * $i;
+
         & > [class*="col"] {
-            padding-left: 1px * $i;
             padding-right: 1px * $i;
+            padding-left: 1px * $i;
         }
     }
 }
-@for $i from 16 through 80 {
+@for $i from 16 through 50 {
     .row-#{1 * $i} {
-        margin-left: -1px * $i;
         margin-right: -1px * $i;
-        
+        margin-left: -1px * $i;
+
         // Responsive
-        @media #{$laptop-device}{
-            margin-left: -15px;
+        @media #{$large-desktop} {
             margin-right: -15px;
-        }
-        @media #{$desktop-device}{
             margin-left: -15px;
-            margin-right: -15px;
         }
-        @media #{$tablet-device}{
+        @media #{$small-desktop} {
+            margin-right: -15px;
             margin-left: -15px;
-            margin-right: -15px;
         }
-        @media #{$large-mobile}{
+        @media #{$extra-large-mobile} {
+            margin-right: -15px;
             margin-left: -15px;
-            margin-right: -15px;
         }
-        
+        @media #{$large-mobile} {
+            margin-right: -15px;
+            margin-left: -15px;
+        }
+
         & > [class*="col"] {
-            padding-left: 1px * $i;
             padding-right: 1px * $i;
-        
+            padding-left: 1px * $i;
+
             // Responsive
-            @media #{$laptop-device}{
-                padding-left: 15px;
+            @media #{$large-desktop} {
                 padding-right: 15px;
+                padding-left: 15px;
             }
-            @media #{$desktop-device}{
-                padding-left: 15px;
+            @media #{$small-desktop} {
                 padding-right: 15px;
+                padding-left: 15px;
             }
-            @media #{$tablet-device}{
-                padding-left: 15px;
+            @media #{$extra-large-mobile} {
                 padding-right: 15px;
+                padding-left: 15px;
             }
-            @media #{$large-mobile}{
-                padding-left: 15px;
+            @media #{$large-mobile} {
                 padding-right: 15px;
+                padding-left: 15px;
             }
         }
     }
 }
 
-/* no gutters */
 .no-gutters {
-    margin-left: 0;
     margin-right: 0;
-    & > .col, & > [class*="col-"] {
+    margin-left: 0;
+    & > .col,
+    & > [class*="col-"] {
+        margin: 0;
         padding-right: 0;
         padding-left: 0;
-        margin: 0;
     }
 }
 
 
 
-/*=====  End of Helper CSS  ======*/
+/*=====  End of Helper  ======*/
 
