--- a/src/assets/scss/3-layouts/_footer.scss
+++ b/src/assets/scss/3-layouts/_footer.scss
@@ -1,8 +1,8 @@
 
 /*=============================================
-=            backgrounds            =
+=            Footer            =
 =============================================*/
 
+/*=====  End of Footer ======*/
 
-/*=====  End of backgrounds  ======*/
 
