--- a/src/partials/page-top.htm
+++ b/src/partials/page-top.htm
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html class="no-js" lang="zxx">
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Template Title</title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Favicon -->
-		<link rel="icon" href="assets/img/favicon.ico">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Template Name</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Favicon -->
+	<link rel="icon" href="assets/img/favicon.ico">
 
-		<!-- CSS
+	<!-- CSS
 		============================================ -->
-	
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	
-		<!-- FontAwesome CSS -->
-		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-		
 
-		<!-- Vendor & Plugins CSS (Please remove the comment from below vendor.min.css & plugins.min.css for better website load performance and remove css files from avobe) -->
-		<!--
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+	<!-- FontAwesome CSS -->
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+
+
+	<!-- Vendor & Plugins CSS (Please remove the comment from below vendor.min.css & plugins.min.css for better website load performance and remove css files from avobe) -->
+	<!--
 		<link rel="stylesheet" href="assets/css/vendor.min.css">
 		<link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
 		-->
 
-		<!-- Main Style CSS -->
-		<link rel="stylesheet" href="assets/css/style.css">
+	<!-- Main Style CSS -->
+	<link rel="stylesheet" href="assets/css/style.css">
 
 
-	</head>
+</head>
 
-	<body>
+<body>
